--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
   margin-top: 20px;
   padding: 15px;
   border: 1px solid #ccc;
-  background-color: white;
+  background-color: rgb(233, 231, 231);
   border-radius: 6px;
   min-height: 80px;
 }
